--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" 
-  href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
     <title>Become a Bell Ringer</title>
 </head>
 <body>
@@ -27,5 +28,18 @@
             </ul>
         </div>
     </nav>
+    <footer>
+      <ul class="social-networks">
+        <li>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i>Facebook</a>
+        </li>
+        <li>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i>Youtube</a>
+        </li>
+      </ul>
+    </footer>
 </body>
 </html>
