--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
     <title>Become a Bell Ringer</title>
@@ -14,7 +13,7 @@
         <div class="background-to-nav">
             <ul class="menu">
                 <li>
-                    <a href="#" class="active">Home</a>
+                    <a href="#" id="active">Home</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
@@ -28,16 +27,21 @@
             </ul>
         </div>
     </nav>
+    <section>
+        <div class="hero-image">
+            <img src="assets/images/bell tower.jpg" class="bell_tower">
+        </div>
+    </section>
     <footer>
       <ul class="social-networks">
         <li>
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i>Facebook</a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
         </li>
         <li>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
+            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
         </li>
         <li>
-            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i>Youtube</a>
+            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a>
         </li>
       </ul>
     </footer>
