Finish styling CSS for hero image, and add jumbotron to index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
         </div>
     </nav>
     <section>
-        <div class="hero-image">
-            <img src="assets/images/bell tower.jpg" class="bell_tower">
+        <div class="hero-image" id="overlay">
+            <img src="assets/images/Alverstoke5.jpg" class="bell_tower">
+        </div>
+    </section>
+    <section>
+        <div class="jumbotron">
+            <h1 class="display-4">Bell Ringing and Campanology</h1>
+
+                <p class="lead">Fancy a challenge?</p>
+            <hr class="my-4">
+                <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p>
+            <p class="lead">Ready to meet new people?</p>
+            <hr class="my-4">
+                <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p>
         </div>
     </section>
     <footer>
