Amend hero image and overlay in style.css, and amend formatting of jumbotron in index.html

--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
     <title>Become a Bell Ringer</title>
 </head>
 <body>
-    <nav>
-        <div class="background-to-nav">
-            <ul class="menu">
-                <li>
-                    <a href="#" id="active">Home</a>
-                </li>
-                <li>
-                    <a href="#">Gallery</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
     <section>
-        <div class="hero-image" id="overlay">
-            <img src="assets/images/Alverstoke5.jpg" class="bell_tower">
+        <nav>
+            <div class="background-to-nav">
+                <ul class="menu">
+                    <li>
+                        <a href="#" id="active">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+    <section>
+        <div id="overlay"></div>
+        <div class="hero-image">
+            <img src="assets/images/Alverstoke5.jpg"  class="bell_tower">
         </div>
     </section>
     <section>
         <div class="jumbotron">
-            <h1 class="display-4">Bell Ringing and Campanology</h1>
-
+            <h1 class="display-4">Bell Ringing and Campanology</h1><hr class="my-4">
                 <p class="lead">Fancy a challenge?</p>
-            <hr class="my-4">
-                <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p>
-            <p class="lead">Ready to meet new people?</p>
-            <hr class="my-4">
-                <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p>
+                    <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p><hr class="my-4">
+                <p class="lead">Ready to meet new people?</p>
+                    <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p><hr class="my-4">
         </div>
     </section>
     <footer>
