--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
     <section>
         <nav>
             <div class="background-to-nav">
-                <ul class="menu">
+                <!--<div class="navbar navbar-inverse navbar-static-top d-block sm-none" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                    </div>
+    
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.php">Home</a></li>
+                            <li><a href="about.php">About</a></li>
+                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="contact.php">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>-->
+
+                <ul class="d-none d-sm-block menu">
                     <li>
                         <a href="#" id="active">Home</a>
                     </li>
@@ -30,9 +53,9 @@
         </nav>
     </section>
     <section>
-        <div id="overlay"></div>
+        <div class="opaque-overlay">
+        </div>
         <div class="hero-image">
-            <img src="assets/images/Alverstoke5.jpg"  class="bell_tower">
         </div>
     </section>
     <section>
