Create 'about', 'contact' and 'gallery' html pages, add header and footer to each, and create links between pages

--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
             <div class="background-to-nav">
                 <ul class="d-block d-sm-none nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active dropdown dropdown-toggle" href="index.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
+                        <a class="nav-link dropdown dropdown-toggle" href="index.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Gallery</a>
-                            <a class="dropdown-item" href="#">About</a>
+                            <a class="dropdown-item active" href="#">About</a>
                             <a class="dropdown-item" href="#">Contact</a>
                         </div>
                     </li>
@@ -25,13 +25,13 @@
 
                 <ul class="d-none d-sm-block menu">
                     <li>
-                        <a href="index.html" id="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html" id="active">About</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -40,21 +40,8 @@
             </div>
         </nav>
     </section>
-    <section>
-        <div class="opaque-overlay">
-        </div>
-        <div class="hero-image">
-        </div>
-    </section>
-    <section>
-        <div class="jumbotron">
-            <h1 class="display-4">Bell Ringing and Campanology</h1><hr class="my-4">
-                <p class="lead">Fancy a challenge?</p>
-                    <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p><hr class="my-4">
-                <p class="lead">Ready to meet new people?</p>
-                    <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p><hr class="my-4">
-        </div>
-    </section>
+    
+    
     <footer>
       <ul class="social-networks">
         <li>
