--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
                 <ul class="d-none d-sm-block menu">
                     <li>
-                        <a href="index.html" id="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="gallery.html">Gallery</a>
@@ -34,27 +34,14 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html" id="active">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </section>
-    <section>
-        <div class="opaque-overlay">
-        </div>
-        <div class="hero-image">
-        </div>
-    </section>
-    <section>
-        <div class="jumbotron">
-            <h1 class="display-4">Bell Ringing and Campanology</h1><hr class="my-4">
-                <p class="lead">Fancy a challenge?</p>
-                    <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p><hr class="my-4">
-                <p class="lead">Ready to meet new people?</p>
-                    <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p><hr class="my-4">
-        </div>
-    </section>
+    
+    
     <footer>
       <ul class="social-networks">
         <li>
