On all html pages, mobile navbar amended to have active class on top bar

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
             <div class="background-to-nav">
                 <ul class="d-block d-sm-none nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active dropdown dropdown-toggle" href="index.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
+                        <a class="nav-link active dropdown dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Gallery</a>
-                            <a class="dropdown-item" href="#">About</a>
-                            <a class="dropdown-item" href="#">Contact</a>
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="gallery.html">Gallery</a>
+                            <a class="dropdown-item" href="about.html">About</a>
                         </div>
                     </li>
                 </ul>
