--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <li class="nav-item">
                         <a class="nav-link active dropdown dropdown-toggle" href="index.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Gallery</a>
-                            <a class="dropdown-item" href="#">About</a>
-                            <a class="dropdown-item" href="#">Contact</a>
+                            <a class="dropdown-item" href="gallery.html">Gallery</a>
+                            <a class="dropdown-item" href="about.html">About</a>
+                            <a class="dropdown-item" href="contact.html">Contact</a>
                         </div>
                     </li>
                 </ul>
