Complete navbar amendments in style.css, add photos to gallery.html and change photos formatting in style.css

--- a/gallery.html
+++ b/gallery.html
@@ -40,8 +40,20 @@
             </div>
         </nav>
     </section>
-    
-    
+    <section>
+        <div class="gallery-pics">
+            <img src="assets/images/bell tower.jpg" class="image" alt="An image of a bell tower">
+            <img src="assets/images/ringers_happy.jpeg" class="image" alt="An image of happy bell ringers">
+            <img src="assets/images/Alverstoke3.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/ringers_eating.jpeg" class="image" alt="An image of bell ringers eating out">
+            <img src="assets/images/ringers_drinking.jpg" class="image" alt="An image of bell ringers socialising">
+            <img src="assets/images/Alverstoke4.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/bell ropes.jpg" class="image" alt="An image of bell ropes hanging in a belfry">
+            <img src="assets/images/Alverstoke5.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/ringers_drinking_2.jpeg" class="image" alt="An image of bell ringers socialising">
+            <img src="assets/images/Alverstoke2.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+        </div>
+    </section>
     <footer>
       <ul class="social-networks">
         <li>
