--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section>
         <div class="opaque-overlay">
         </div>
-        <div class="hero-image">
+        <div class="hero-image" alt="An image of Alverstoke church, in Gosport, Hampshire">
         </div>
     </section>
     <section>
