--- a/test.html
+++ b/test.html
@@ -9,20 +9,20 @@
     <title>Document</title>
 </head>
 <body>
-    <ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href="index.html">Home</a>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Menu</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Gallery</a>
-      <a class="dropdown-item" href="#">About</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Contact</a>
-    </div>
-  </li>
-</ul>
+    <section class="text-center"> 
+        <img src="/assets/images/alverstoke1.jpg" class="rounded float-left gallery-image" alt="...">
+        <img src="/assets/images/alverstoke2.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/alverstoke3.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/alverstoke4.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/bell_ropes.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/bell_tower.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_drinking.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_drinking_2.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_eating.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_happy.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_happy_2.jpg" class="rounded float-right gallery-image" alt="...">
+        <img src="/assets/images/ringers_drinking.jpg" class="rounded float-right gallery-image" alt="...">
+    </section>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
