Change about.html layout to two columns and try different timeline formats, including styling in style.css

--- a/about.html
+++ b/about.html
@@ -40,30 +40,62 @@
             </div>
         </nav>
     </section>
-    <section>
+    <!--<section>
         <div class="container">
             <div class="grid-1">
-                Square 1
+                <div class="vertical-line">
+                some other content
+                </div>
             </div>
 
-            <div class="grid-2">
-                <img src="/assets/images/bell_ropes.jpg" class="grid-pic">
+            <div class="grid-2 ">
+                <img src="/assets/images/bell_ropes.jpg" class="grid-pic-1 d-none d-sm-block">
             </div>
 
-            <div class="grid-3">
-                
+            <div class="grid-3 d-none d-sm-block">
+                <img src="/assets/images/bell_tower.jpg" class="grid-pic-2">
             </div>
-            <div class="grid-4">
-                Square 4
-            </div>
-            <div class="grid-5">
-                <img src="/assets/images/bell_tower.jpg" class="grid-pic">
-            </div>
-            <div class="grid-6">
-                Square 6
+
+            <div class="grid-4 d-none d-sm-block">
+                <div class="vertical-line">
+                some other content
+                </div>
             </div>
         </div>
+    </section>-->
+    <section>
+        <div class="row">
+            <div class="column-1">
+                <h1>A hobby with a history</h1>
+                    <dl class="row">
+                        <dt class="col-sm-3">Description lists</dt>
+                            <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+
+                        <dt class="col-sm-3">Euismod</dt>
+                            <dd class="col-sm-9">
+                                <p>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</p>
+                                <p>Donec id elit non mi porta gravida at eget metus.</p>
+                            </dd>
+
+                        <dt class="col-sm-3">Malesuada porta</dt>
+                            <dd class="col-sm-9">Etiam porta sem malesuada magna mollis euismod.</dd>
+
+                        <dt class="col-sm-3 text-truncate">Truncated term is truncated</dt>
+                            <dd class="col-sm-9">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+
+                        <dt class="col-sm-3">Nesting</dt>
+                        <dd class="col-sm-9">
+                            <dl class="row">
+                                <dt class="col-sm-4">Nested definition list</dt>
+                                    <dd class="col-sm-8">Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc.</dd>
+                            </dl>
+                        </dd>
+                    </dl>
+            </div>
+            <div class="column-2"></div>
+        </div>
     </section>
+
     <footer>
       <ul class="social-networks">
         <li>
