--- a/about.html
+++ b/about.html
@@ -68,31 +68,30 @@
             <div class="column-1">
                 <h1>A hobby with a history</h1>
                     <dl class="row">
-                        <dt class="col-sm-3">Description lists</dt>
-                            <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+                        <dt class="col-sm-3">400AD</dt>
+                            <dd class="col-sm-9">Bells introduced by Paulinus, Bishop of Nola in Campania, to Christian churches to call people to worship.</dd>
 
-                        <dt class="col-sm-3">Euismod</dt>
+                        <dt class="col-sm-3">1170</dt>
                             <dd class="col-sm-9">
-                                <p>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</p>
-                                <p>Donec id elit non mi porta gravida at eget metus.</p>
+                                <p>The bells of Canterbury Cathedral allegedly tolled themselves when Thomas-a-Becket was murdered.</p>
                             </dd>
 
-                        <dt class="col-sm-3">Malesuada porta</dt>
-                            <dd class="col-sm-9">Etiam porta sem malesuada magna mollis euismod.</dd>
+                        <dt class="col-sm-3">1536</dt>
+                            <dd class="col-sm-9">Many church bells were removed during the dissolution and desecration of monastic abbeys and buildings.</dd>
 
-                        <dt class="col-sm-3 text-truncate">Truncated term is truncated</dt>
-                            <dd class="col-sm-9">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+                        <dt class="col-sm-3 text-truncate">1677</dt>
+                            <dd class="col-sm-9">The Campanalogia is published, a book that introduced popular new methods of change ringing still popular today, such as Grandsire and Stedman.</dd>
 
-                        <dt class="col-sm-3">Nesting</dt>
-                        <dd class="col-sm-9">
-                            <dl class="row">
-                                <dt class="col-sm-4">Nested definition list</dt>
-                                    <dd class="col-sm-8">Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc.</dd>
-                            </dl>
-                        </dd>
+                        <dt class="col-sm-3 text-truncate">1896</dt>
+                            <dd class="col-sm-9">Miss Alice White of Basingstoke was the first woman to complete a full peal (c 3hrs of ringing).</dd>
+
+                        <dt class="col-sm-3">1939</dt>
+                            <dd class="col-sm-9">For 6 years during WWII all bells were silenced, to ring only to inform of an invasion by enemy troops.  Ringing resumed in 1945.</dd>
                     </dl>
             </div>
-            <div class="column-2"></div>
+            <div class="column-2">
+                <img src="/assets/images/bell_casting.jpg" class="about_image">
+            </div>
         </div>
     </section>
 
