--- a/contact.html
+++ b/contact.html
@@ -6,42 +6,94 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
-    <title>Become a Bell Ringer</title>
+    <title>Document</title>
 </head>
 <body>
-    <section>
-        <nav>
-            <div class="background-to-nav">
-                <ul class="d-block d-sm-none nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active dropdown dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="gallery.html">Gallery</a>
-                            <a class="dropdown-item" href="about.html">About</a>
-                        </div>
-                    </li>
-                </ul>
+    <nav>
+        <div class="background-to-nav">
+            <ul class="d-block d-sm-none nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active dropdown dropdown-toggle" href="contact.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="index.html">Home</a>
+                        <a class="dropdown-item" href="gallery.html">Gallery</a>
+                        <a class="dropdown-item" href="about.html">About</a>
+                    </div>
+                </li>
+            </ul>
 
-                <ul class="d-none d-sm-block menu">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="gallery.html">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="contact.html" id="active">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <ul class="d-none d-sm-block menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="contact.html" id="active">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section>
+        <h1 class="form-header">Interested in learning more?</h1>
+        <h2 class="form-h2-header">Fill in the following form and we will respond with information about ringing near you</h2>
+        <div class="form-holder">
+            <form class="form">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="name" class="form-control" id="name" placeholder="Your name here">
+                </div> <br>
+                <div class="form-group">
+                    <label for="town/city">Town/ City</label>
+                    <input type="town/city" class="form-control" id="town/city" placeholder="Your town/ city here">
+                </div> <br>
+                <div class="form-group">
+                    <label for="county">County</label>
+                    <select class="form-control" id="county">
+                        <option>Please select</option>
+                        <option>Derbyshire</option>
+                        <option>Durham</option>
+                        <option>Essex</option>
+                        <option>Gloucestershire</option>
+                        <option>Hampshire</option>
+                        <option>Kent</option>
+                        <option>Lancashire</option>
+                        <option>Leicestershire</option>
+                        <option>Middlesex</option>
+                        <option>Northamptonshire</option>
+                        <option>Nottinghamshire</option>
+                        <option>Somerset</option>
+                        <option>Surrey</option>
+                        <option>Sussex</option>
+                        <option>Warwickshire</option>
+                        <option>Worcestershire</option>
+                        <option>Yorkshire</option>
+                    </select> 
+                </div> <br>
+                <div class="form-group">
+                    <label for="heard-about">How did you hear about bell ringing?</label>
+                    <select class="form-control" id="heard-about">
+                        <option>Please select</option>
+                        <option>From a friend/ neighbour</option>
+                        <option>From a family member</option>
+                        <option>Online</option>
+                        <option>In a newspaper</option>
+                        <option>At my local church</option>
+                        <option>Other</option>
+                    </select>
+                </div> <br>
+                <div class="form-group">
+                    <label for="accessibility">Do you have any accessbility issues (e.g. cannot climb stairs to a belfry)?</label>
+                    <textarea class="form-control" id="accessibility" rows="2"></textarea>
+                </div> <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </section>
-    
-    
     <footer>
       <ul class="social-networks">
         <li>
@@ -55,7 +107,7 @@
         </li>
       </ul>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
