Amend about.html css script to make it responsive to different media formats

--- a/about.html
+++ b/about.html
@@ -40,29 +40,6 @@
             </div>
         </nav>
     </section>
-    <!--<section>
-        <div class="container">
-            <div class="grid-1">
-                <div class="vertical-line">
-                some other content
-                </div>
-            </div>
-
-            <div class="grid-2 ">
-                <img src="/assets/images/bell_ropes.jpg" class="grid-pic-1 d-none d-sm-block">
-            </div>
-
-            <div class="grid-3 d-none d-sm-block">
-                <img src="/assets/images/bell_tower.jpg" class="grid-pic-2">
-            </div>
-
-            <div class="grid-4 d-none d-sm-block">
-                <div class="vertical-line">
-                some other content
-                </div>
-            </div>
-        </div>
-    </section>-->
     <section>
         <div class="row">
             <div class="column-1">
@@ -79,10 +56,10 @@
                         <dt class="col-sm-3">1536</dt>
                             <dd class="col-sm-9">Many church bells were removed during the dissolution and desecration of monastic abbeys and buildings.</dd>
 
-                        <dt class="col-sm-3 text-truncate">1677</dt>
+                        <dt class="col-sm-3">1677</dt>
                             <dd class="col-sm-9">The Campanalogia is published, a book that introduced popular new methods of change ringing still popular today, such as Grandsire and Stedman.</dd>
 
-                        <dt class="col-sm-3 text-truncate">1896</dt>
+                        <dt class="col-sm-3">1896</dt>
                             <dd class="col-sm-9">Miss Alice White of Basingstoke was the first woman to complete a full peal (c 3hrs of ringing).</dd>
 
                         <dt class="col-sm-3">1939</dt>
