--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,9 @@
             <img src="assets/images/bell_ropes.jpg" class="image" alt="An image of bell ropes hanging in a belfry">
             <img src="assets/images/alverstoke5.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
             <img src="assets/images/ringers_drinking_2.jpeg" class="image" alt="An image of bell ringers socialising">
-            <img src="assets/images/alverstoke2.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/alverstoke1.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/bell_casting.jpg" class="image" alt="An image of bells being cast">
+            <img src="assets/images/ringers_eating.jpeg" class="image" alt="An image of ringers eating">
         </div>
     </section>
     <footer>
