--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <h1 class="form-header">Interested in learning more?</h1>
         <h2 class="form-h2-header">Fill in the following form and we will respond with information about ringing near you</h2>
         <div class="form-holder">
-            <form class="form">
+            <form class="form" action="#" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="name" class="form-control" id="name" placeholder="Your name here">
