--- a/test.html
+++ b/test.html
@@ -10,58 +10,37 @@
 </head>
 <body>
     <section>
-        <h1 class="form-header">Interested in learning more?</h1>
-        <h2 class="form-h2-header">Fill in the following form and we will respond with information about ringing near you</h2>
-        <div class="form-holder">
-            <form class="form">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="name" class="form-control" id="name" placeholder="Your name here">
+        <div class="timeline">
+            <div class="container container-first">
+                <div class="content">
+                <h2>2017</h2>
+                <p>Lorem ipsum..</p>
                 </div>
-                <div class="form-group">
-                    <label for="town/city">Town/ City</label>
-                    <input type="town/city" class="form-control" id="town/city" placeholder="Your town/ city here">
+            </div>
+            <div class="container">
+                <div class="content">
+                <h2>2016</h2>
+                <p>Lorem ipsum..</p>
                 </div>
-                <div class="form-group">
-                    <label for="county">County</label>
-                    <select class="form-control" id="county">
-                        <option>Please select</option>
-                        <option>Derbyshire</option>
-                        <option>Durham</option>
-                        <option>Essex</option>
-                        <option>Gloucestershire</option>
-                        <option>Hampshire</option>
-                        <option>Kent</option>
-                        <option>Lancashire</option>
-                        <option>Leicestershire</option>
-                        <option>Middlesex</option>
-                        <option>Northamptonshire</option>
-                        <option>Nottinghamshire</option>
-                        <option>Somerset</option>
-                        <option>Surrey</option>
-                        <option>Sussex</option>
-                        <option>Warwickshire</option>
-                        <option>Worcestershire</option>
-                        <option>Yorkshire</option>
-                    </select>
+            </div>
+            <div class="container">
+                <div class="content">
+                <h2>2016</h2>
+                <p>Lorem ipsum..</p>
                 </div>
-                <div class="form-group">
-                    <label for="heard-about">How did you hear about bell ringing?</label>
-                    <select class="form-control" id="heard-about">
-                        <option class="shaded">Please select</option>
-                        <option>From a friend/ neighbour</option>
-                        <option>From a family member</option>
-                        <option>Online</option>
-                        <option>In a newspaper</option>
-                        <option>At my local church</option>
-                        <option>Other</option>
-                    </select>
+            </div>
+            <div class="container">
+                <div class="content">
+                <h2>2016</h2>
+                <p>Lorem ipsum..</p>
                 </div>
-                <div class="form-group">
-                    <label for="accessibility">Do you have any accessbility issues (e.g. cannot climb stairs to a belfry)?</label>
-                    <textarea class="form-control" id="accessibility" rows="2"></textarea>
+            </div>
+            <div class="container">
+                <div class="content">
+                <h2>2016</h2>
+                <p>Lorem ipsum..</p>
                 </div>
-            </form>
+            </div>
         </div>
     </section>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
