Finish amending 'about.html' css to ensure media queries react correctly to different devices

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <section>
         <div class="row">
             <div class="column-1">
-                <h1>A hobby with a history</h1>
+                <h1 class="about-title">A hobby with a history</h1>
                     <dl class="row">
                         <dt class="col-sm-3">400AD</dt>
                             <dd class="col-sm-9">Bells introduced by Paulinus, Bishop of Nola in Campania, to Christian churches to call people to worship.</dd>
@@ -63,11 +63,11 @@
                             <dd class="col-sm-9">Miss Alice White of Basingstoke was the first woman to complete a full peal (c 3hrs of ringing).</dd>
 
                         <dt class="col-sm-3">1939</dt>
-                            <dd class="col-sm-9">For 6 years during WWII all bells were silenced, to ring only to inform of an invasion by enemy troops.  Ringing resumed in 1945.</dd>
+                            <dd class="col-sm-9 final-about">For 6 years during WWII all bells were silenced, to ring only to inform of an invasion by enemy troops.  Ringing resumed in 1945.</dd>
                     </dl>
             </div>
             <div class="column-2">
-                <img src="/assets/images/bell_casting.jpg" class="about_image">
+                <img src="/assets/images/bell_casting.jpg" class="about_image" alt="a bell being cast">
             </div>
         </div>
     </section>
