--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
             <img src="assets/images/ringers_drinking_2.jpeg" class="image" alt="An image of bell ringers socialising">
             <img src="assets/images/alverstoke1.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
             <img src="assets/images/bell_casting.jpg" class="image" alt="An image of bells being cast">
-            <img src="assets/images/ringers_eating.jpeg" class="image" alt="An image of ringers eating">
+            <img src="assets/images/ringers_happy_2.jpg" class="image" alt="An image of happy ringers">
         </div>
     </section>
     <footer>
