--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
                 <p class="lead">Fancy a challenge?</p>
                     <p>Once you've learned the basics, the amount that you can progress on to and master is mind boggling</p><hr class="my-4">
                 <p class="lead">Ready to meet new people?</p>
-                    <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p><hr class="my-4">
+                    <p>Being a bell ringer opens up a community of over 40,000 friends across the world, always ready to welcome another ringer to their tower</p><hr class="my-4"><br>
+                <p class="lead">Find your local ringing community</p> 
+                    <p><a href="contact.html">Click here</a> to find out how you can get in touch to get started</p><hr class="my-4">
         </div>
-    </section>
+        </section>
     <footer>
       <ul class="social-networks">
         <li>
