Amend image sizes to ensure they all fit in line with gallery formatting

--- a/gallery.html
+++ b/gallery.html
@@ -44,17 +44,17 @@
     <section>
         <!--reduces to 2 columns wide for pics at screens 992px and smaller-->
         <div class="gallery-pics">
-            <img src="assets/images/ringers_happy.jpeg" class="image" alt="An image of happy bell ringers">
-            <img src="assets/images/alverstoke3.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
-            <img src="assets/images/ringers_eating.jpeg" class="image" alt="An image of bell ringers eating out">
-            <img src="assets/images/ringers_drinking.jpg" class="image" alt="An image of bell ringers socialising">
-            <img src="assets/images/alverstoke4.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
-            <img src="assets/images/bell_ropes.jpg" class="image" alt="An image of bell ropes hanging in a belfry">
-            <img src="assets/images/alverstoke5.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
-            <img src="assets/images/ringers_drinking_2.jpeg" class="image" alt="An image of bell ringers socialising">
-            <img src="assets/images/alverstoke1.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
-            <img src="assets/images/bell_casting.jpg" class="image" alt="An image of bells being cast">
-            <img src="assets/images/ringers_happy_2.jpg" class="image" alt="An image of happy ringers">
+            <img src="assets/images/ringers_happy_2_r.jpg" class="image" alt="An image of happy bell ringers">
+            <img src="assets/images/alverstoke3_r.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/ringers_eating_r.jpeg" class="image" alt="An image of bell ringers eating out">
+            <img src="assets/images/ringers_drinking_r.jpg" class="image" alt="An image of bell ringers socialising">
+            <img src="assets/images/alverstoke4_r.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/bell_ropes_r.jpg" class="image" alt="An image of bell ropes hanging in a belfry">
+            <img src="assets/images/bell_ringers_01_r.jpg" class="image" alt="An image people bell ringing">
+            <img src="assets/images/ringers_drinking_2_r.jpeg" class="image" alt="An image of bell ringers socialising">
+            <img src="assets/images/alverstoke1_r.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+            <img src="assets/images/bell_casting_r.jpg" class="image" id="casting" alt="An image of bells being cast">
+            <img src="assets/images/ringers_happy_r.jpeg" class="image" alt="An image of happy ringers">
         </div>
     </section>
     <footer>
