--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Become a Bell Ringer</title>
 </head>
 <body>
-    <section>
+    <header>
         <nav>
             <div class="background-to-nav">
                 <!--nav bar dropdown menu for mobile-->
@@ -40,8 +40,8 @@
                 </ul>
             </div>
         </nav>
-    </section>
-    <section>
+    </header>
+    <section> <!--opaque overlay to dim hero image in background-->
         <div class="opaque-overlay">
         </div>
         <div class="hero-image" alt="An image of Alverstoke church, in Gosport, Hampshire">
@@ -60,7 +60,7 @@
     </section>
     <section>
         <div class="image-pic">
-            <img src="assets/images/ringing_animation.gif" class="how-ringing-works-image">
+            <img src="assets/images/ringing_animation.gif" class="how-ringing-works-image" alt="An animation of someone ringing a church bell">
         </div>
     </section>
     <footer>
