Run HTML validator and change 'section' to 'div' on index.html lines 44,50 and 61 of code

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>Become a Bell Ringer</title>
 </head>
 <body>
-    <section>
+    <header>
         <nav>
             <div class="background-to-nav">
                 <!--nav bar dropdown menu for mobile-->
@@ -40,7 +40,7 @@
                 </ul>
             </div>
         </nav>
-    </section>
+    </header>
     <section>
         <div class="row">
             <div class="column-1">
@@ -73,7 +73,6 @@
             </div>
         </div>
     </section>
-
     <footer>
         <!--footer - used for social media links-->
         <ul class="social-networks">
