--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
     <title>Become a Bell Ringer</title>
 </head>
 <body>
-    <section>
+    <header>
         <nav>
             <div class="background-to-nav">
                 <!--nav bar dropdown menu for mobile-->
@@ -40,8 +40,8 @@
                 </ul>
             </div>
         </nav>
-    </section>
-    <section>
+    </header>
+    <div>
         <!--reduces to 2 columns wide for pics at screens 992px and smaller-->
         <div class="gallery-pics">
             <img src="assets/images/ringers_happy_2_r.jpg" class="image" alt="An image of happy bell ringers">
@@ -56,7 +56,7 @@
             <img src="assets/images/bell_casting_r.jpg" class="image" id="casting" alt="An image of bells being cast">
             <img src="assets/images/ringers_happy_r.jpeg" class="image" alt="An image of happy ringers">
         </div>
-    </section>
+    </div>
     <footer>
         <!--footer - used for social media links-->
         <ul class="social-networks">
