--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             </div>
         </nav>
     </header>
-    <section> <!--opaque overlay to dim hero image in background-->
+    <div> <!--opaque overlay to dim hero image in background-->
         <div class="opaque-overlay">
         </div>
-        <div class="hero-image" alt="An image of Alverstoke church, in Gosport, Hampshire">
+        <div class="hero-image">
         </div>
-    </section>
-    <section>
+    </div>
+    <div> <!--jumbotron and headings-->
         <div class="jumbotron">
             <h1 class="display-4">Bell Ringing and Campanology</h1><hr class="my-4">
                 <p class="lead">Fancy a challenge?</p>
@@ -57,12 +57,12 @@
                 <p class="lead">Find your local ringing community</p> 
                     <p><a href="contact.html">Click here</a> to find out how you can get in touch to get started</p><hr class="my-4">
         </div>
-    </section>
-    <section>
+    </div>
+    <div> <!--animation of stickman ringing-->
         <div class="image-pic">
             <img src="assets/images/ringing_animation.gif" class="how-ringing-works-image" alt="An animation of someone ringing a church bell">
         </div>
-    </section>
+    </div>
     <footer>
         <!--footer - used for social media links-->
         <ul class="social-networks">
