Create Audio folder, add OGG audio file

--- a/about.html
+++ b/about.html
@@ -65,11 +65,12 @@
 
                         <dt class="col-sm-3">1939</dt>
                             <dd class="col-sm-9 final-about">For 6 years during WWII all bells were silenced, to ring only to inform of an invasion by enemy troops.  Ringing resumed in 1945.</dd>
-                    </dl>
+                        </dl>
             </div>
             <!--below column disappears at screens below 768px, making image disappear-->
             <div class="column-2">
                 <img src="/assets/images/bell_casting.jpg" class="about_image" alt="a bell being cast">
+                <span id="audio"><audio src="audio/Bob_Minor.ogg" controls muted></audio></span>
             </div>
         </div>
     </section>
