Add margin-top to audio in style.css and amend image top padding to allow audio to fit in about.html effectively

--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
             </div>
             <!--below column disappears at screens below 768px, making image disappear-->
             <div class="column-2">
+                <audio id="audio" src="audio/Bob_Minor.ogg" controls muted></audio>
                 <img src="/assets/images/bell_casting.jpg" class="about_image" alt="a bell being cast">
-                <span id="audio"><audio src="audio/Bob_Minor.ogg" controls muted></audio> </span>
             </div>
         </div>
     </section>
