Add label to audio in about.html, and update style.css to keep label in line with audio controls

--- a/about.html
+++ b/about.html
@@ -69,7 +69,8 @@
             </div>
             <!--below column disappears at screens below 768px, making image disappear-->
             <div class="column-2">
-                <audio id="audio" src="audio/Bob_Minor.ogg" controls muted></audio>
+                <audio name="audio" class="audio" src="audio/Bob_Minor.ogg" controls muted>A synthesised audio of the method Plain Bob</audio>
+                <label for="audio" class="audio_label">the method Plain Bob Minor</label>
                 <img src="/assets/images/bell_casting.jpg" class="about_image" alt="a bell being cast">
             </div>
         </div>
