Change audio_label from 'label' element to 'span' element

--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
             </div>
             <!--below column disappears at screens below 768px, making image disappear-->
             <div class="column-2">
-                <audio name="audio" class="audio" src="audio/Bob_Minor.ogg" controls muted>A synthesised audio of the method Plain Bob</audio>
-                <label for="audio" class="audio_label">the method Plain Bob Minor</label>
+                <audio class="audio" src="audio/Bob_Minor.ogg" controls muted>A synthesised audio of the method Plain Bob</audio>
+                <span class="audio_label">the method Plain Bob Minor</span>
                 <img src="assets/images/bell_casting_r.jpg" class="about_image" alt="a bell being cast">
             </div>
         </div>
