Remove href=index.html from <button> on completed_form.html to pass validator check

--- a/completed_form.html
+++ b/completed_form.html
@@ -42,7 +42,7 @@
         <div class="back-to-homepage">
         <h1 class="form-header">Many thanks for getting in touch</h1>
         <h2 class="form-h2-header">We will be in touch with you shortly with how to contact your nearest tower or organisation</h2>
-        <button href="index.html" class="back-to-homepage-button">Home</button>
+        <button class="back-to-homepage-button">Home</button>
         </div>
     </section>
     <footer>
